# named_tuples

./: .gitignore  CMakeLists.txt  Makefile  README.md  exception_tuple.h  exception_tuple_example.cpp  gtest_excep_tuple.cpp  gtest_nvtuple.cpp  named_tuple.h  named_tuple_example.cpp
